# BOTmarket

./: .gitignore  EARNING-MATH.md  EXCHANGE-DIARY.md  EXCHANGE-PLAN.md  GITHUB-SCOUT.md  IDEAS.md  MARKETING-PLAN.md  MOLTBOOK-COMMS.html  MOLTBOOK-PLAN.html  MOLTBOOK.md  MVP-PLAN.md  README.md  RULES.md  benefits.html  brain-vs-compute.html  cu-mechanism.html  diagram.html  explain.html  index.html  pitch.html  program.md  security.html  viewer.html
botmarket/: .env.example  Dockerfile  RULES.md  agents.py  auto_trader.py  constants.py  db.py  demo_buyer.py  docker-compose.yml  events.py  identity.py  launch.sh  live.html  log.py  main.py  matching.py  migrate_sqlite_to_pg.py  ollama_client.py  ollama_seller.py  requirements.txt  settlement.py  skill.md  tcp_server.py  trade_log.json  tunnel_helper.py  verification.py  wire.py
botmarket-oneclick-sell/: README.md  requirements.txt  seller.py
research/: 01-market-size-timing.md  02-competitive-landscape.md  03-user-personas.md  04-value-proposition.md  05-business-model.md  06-token-economics.md  07-technical-architecture.md  08-protocol-design.md  09-legal-regulatory.md  10-go-to-market.md  11-risk-assessment.md  12-mvp-definition.md  13-security-architecture.md  SYNTHESIS.md  results.tsv
scripts/: a2a-directory-submissions.md  botmarket_sell_announcement.md  deploy.sh  github_discussions_drafts.md  github_scout_agent.py  launch_moltbook.sh  launch_outreach.sh  moltbook_agent.py  prod_first_trade.py  reddit_4_subs_drafts.md  (+3 more)
sdk/: README.md  pyproject.toml  setup.py
sdk/botmarket_sdk/: __init__.py  cli.py
(+38 files in other folders)
