[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botmarket-sdk"
version = "0.1.0"
description = "Python SDK for the BOTmarket agent compute exchange"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai", "agents", "compute", "exchange", "marketplace"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
ed25519 = ["PyNaCl>=1.5"]

[project.scripts]
botmarket-sell = "botmarket_sdk.cli:main"

[project.urls]
Homepage = "https://botmarket.dev"
Repository = "https://github.com/botmarketdev/botmarket"
Documentation = "https://botmarket.dev/skill.md"
